<resources>
    <string name="app_name">RU Books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="major">Major</string>
    <string name="email">Email</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_text">My Text</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="cancel">Cancel</string>
    <string name="attempts_left">Attempts left:</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="account_info">Account Info</string>
    <string name="update_account">Update Account</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">delete account</string>
    <string name="add_book">Add book</string>
    <string name="isbn">ISBN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="version">Version</string>
    <string name="year">Year</string>
    <string name="add">ADD</string>
    <string name="course">Course</string>
    <string name="books">Books</string>
    <string name="student_number">Student Number</string>
    <string name="update">Update</string>
    <string name="dark_mode">Dark mode</string>
    <string name="notifications">Notifications</string>

    <string-array name="year">
        <item>Select year</item>
        <item>first</item>
        <item>second</item>
        <item>third</item>
    </string-array>
</resources>