<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <TextView
        android:id="@+id/textview_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview_login_books"
        android:gravity="center"
        android:text="@string/sign_in"
        style="@style/Theme.AppCompat"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_login_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#A5D2FC"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:padding="13dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edittext_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_login_username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#A5D2FC"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/textview_login_attempts_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_login_password"
        android:layout_alignTop="@+id/materialbutton_login_sign_in"
        android:layout_alignBottom="@+id/materialbutton_login_sign_in"
        android:layout_alignParentStart="@+id/materialbutton_login_sign_in"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/materialbutton_login_sign_in"
        android:text="@string/attempts_left"
        android:textColor="#FF0000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textview_login_attempts_left_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_login_attempts_left"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-27dp"
        android:layout_marginEnd="35dp"
        android:layout_toStartOf="@+id/textview_login_attempts_left"
        android:text="New Text"
        android:textColor="#FF0000"
        android:textSize="17sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialbutton_login_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@id/edittext_login_password"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#5766ED"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="25dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialbutton_login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignEnd="@+id/textview_login_title"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#A4D2FC"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="25dp" />

    <TextView
        android:id="@+id/textview_login_sign_up_text"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#5766ED"
        android:gravity="center_vertical"
        android:paddingStart="5sp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageview_login_books"
        android:layout_width="136dp"
        android:layout_height="104dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/books" />
</RelativeLayout>