<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/update">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textview_update_account_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/update_account"
                style="@style/Theme.AppCompat"
                android:textSize="35sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edittext_update_account_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textview_update_account_text"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:background="@drawable/roundstyle"
                android:backgroundTint="#A5D2FC"
                android:drawablePadding="20dp"
                android:hint="@string/full_name"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="25sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edittext_update_account_student_number"
                android:layout_below="@id/edittext_update_account_full_name"
                android:background="@drawable/roundstyle"
                android:backgroundTint="#A5D2FC"
                android:hint="@string/student_number"
                android:textColorHint="@color/black"
                android:drawableStart="@drawable/baseline_person_24"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:padding="13dp"
                android:textSize="25sp"
                android:drawablePadding="20dp"/>

            <EditText
                android:id="@+id/edittext_update_account_major"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edittext_update_account_student_number"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/roundstyle"
                android:drawableStart="@drawable/baseline_school_24"
                android:backgroundTint="#A5D2FC"
                android:drawablePadding="20dp"
                android:hint="@string/major"
                android:padding="13dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="25sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edittext_update_account_major"
                android:id="@+id/spinner_update_account_year"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="50dp"
                android:dropDownSelector="@color/black"
                android:background="@drawable/roundstyle"
                android:backgroundTint="#A5D2FC"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edittext_update_account_email"
                android:layout_below="@id/spinner_update_account_year"
                android:background="@drawable/roundstyle"
                android:drawableStart="@drawable/baseline_email_24"
                android:backgroundTint="#A5D2FC"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:padding="13dp"
                android:textSize="25sp"
                android:drawablePadding="20dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialbutton_update_account"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_below="@id/edittext_update_account_email"
                android:layout_centerHorizontal="true"
                android:backgroundTint="#5766ED"
                android:text="@string/update"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="25dp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>