<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/update">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:id="@+id/scrollview_add_book">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/purple_700">

                <TextView
                    android:id="@+id/textview_add_book_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/add_book"
                    style="@style/Theme.AppCompat"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edittext_add_book_isbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textview_add_book_text"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="#A5D2FC"
                    android:drawableStart="@drawable/baseline_numbers_24"
                    android:drawablePadding="20dp"
                    android:hint="@string/isbn"
                    android:padding="13dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="25sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edittext_add_book_title"
                    android:layout_below="@id/edittext_add_book_isbn"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="#A5D2FC"
                    android:hint="@string/title"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:padding="13dp"
                    android:textSize="25sp"
                    android:drawableStart="@drawable/baseline_title_24"
                    android:drawablePadding="20dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edittext_add_book_author"
                    android:layout_below="@id/edittext_add_book_title"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="#A5D2FC"
                    android:hint="@string/author"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:padding="13dp"
                    android:textSize="25sp"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="20dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edittext_add_book_version"
                    android:layout_below="@id/edittext_add_book_author"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="#A5D2FC"
                    android:hint="@string/version"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:padding="13dp"
                    android:textSize="25sp"
                    android:drawableStart="@drawable/baseline_numbers_24"
                    android:drawablePadding="20dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edittext_add_book_year"
                    android:layout_below="@id/edittext_add_book_version"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="#A5D2FC"
                    android:hint="@string/year"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:padding="13dp"
                    android:textSize="25sp"
                    android:drawableStart="@drawable/baseline_calendar_month_24"
                    android:drawablePadding="20dp" />


                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edittext_add_book_year"
                    android:id="@+id/spinner_add_book_course"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:spinnerMode="dropdown"
                    android:dropDownVerticalOffset="50dp"
                    android:dropDownSelector="@color/black"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="#A5D2FC"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialbutton_add_book"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@id/scrollview_add_book"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#5766ED"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="25dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/test"
        android:layout_below="@id/scrollview_add_book"
        android:layout_toStartOf="@+id/materialbutton_add_book"
        android:backgroundTint="#5766ED"
        android:text="test notification"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="25dp"/>

</RelativeLayout>