<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A4D2FC"
    tools:context=".ui.account.AccountFragment">

    <ImageView
        android:id="@+id/imageview_account_picture"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/account" />

    <TextView
        android:id="@+id/textview_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview_account_picture"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/account_info"
        style="@style/Theme.AppCompat"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/textview_account_full_name"
        style="@style/Theme.AppCompat"
        android:layout_below="@+id/textview_account_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/textview_account_student_number"
        style="@style/Theme.AppCompat"
        android:layout_below="@+id/textview_account_full_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/textview_account_major"
        style="@style/Theme.AppCompat"
        android:layout_below="@+id/textview_account_student_number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/textview_account_year"
        style="@style/Theme.AppCompat"
        android:layout_below="@+id/textview_account_major"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:id="@+id/textview_account_email"
        style="@style/Theme.AppCompat"
        android:layout_below="@+id/textview_account_year"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialbutton_account_update"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#A4D2FC"
        android:text="@string/update_account"
        android:textColor="@color/black"
        android:layout_below="@+id/textview_account_email"
        app:cornerRadius="25dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialbutton_account_change_password"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#A4D2FC"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:layout_below="@+id/materialbutton_account_update"
        app:cornerRadius="25dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialbutton_account_delete_account"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="#A4D2FC"
        android:text="@string/delete_account"
        android:textColor="@color/black"
        android:layout_below="@+id/materialbutton_account_change_password"
        app:cornerRadius="25dp" />


</RelativeLayout>