<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textview_change_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/change_password"
        style="@style/Theme.AppCompat"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_change_password_text"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#A5D2FC"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_change_password_confirm_password"
        android:layout_below="@id/edittext_change_password"
        android:background="@drawable/roundstyle"
        android:backgroundTint="#A5D2FC"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:padding="13dp"
        android:textSize="25sp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialbutton_change_password"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@id/edittext_change_password_confirm_password"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#5766ED"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="25dp" />


</RelativeLayout>